fixed some layout issues

--- a/front/css/bootstrap.css
+++ b/front/css/bootstrap.css
@@ -3619,7 +3619,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .pager li > a:hover,
 .pager li > a:focus {
   text-decoration: none;
-  background-color: #dddddd;
+  background-color: #28282e;
 }
 .pager .next > a,
 .pager .next > span {
