--- a/front/css/main.css
+++ b/front/css/main.css
@@ -49,7 +49,7 @@
 
 .chart-gauge {
     width: 100%;
-    max-width: 300px;
+    max-width: 280px;
 }
 
 .chart img {
@@ -128,12 +128,17 @@
     margin-left: 100px;
 }
 
+.navbar-header {
+    min-width: 16.666666%;
+}
+
 .navbar-header .navbar-brand {
     position: relative;
     width: 100%;
 }
 
 .navbar-header .navbar-brand img {
+    border: 5px solid white;
     height: 80px;
     position: absolute;
     top: 0;
@@ -156,6 +161,12 @@
     }
 }
 
+
+@media screen and (min-width: 992px){
+    .navbar-header {
+        width: 16.666666%;
+    }
+}
 
 .navbar-toggle {
     position: absolute;
@@ -254,11 +265,20 @@
     text-align: center;
 }
 
-.splash-screen h1 {
+.splash-screen div {
     text-align: center;
     width: 100%;
-    top: 30%;
-    position: absolute;
+    margin-top: 120px;
+}
+
+.splash-screen h1 {
+    float: none;
+    padding-left: 15px;
+}
+
+.splash-screen img {
+    width: 20%;
+    border: 5px solid white;
 }
 
 .showAnim.ng-hide-add,
